@@ -60,12 +60,18 @@ Version 2.0.0rc6 - The '???' version.
 		  in amulecmd.
 
 	ThePolish:
-		* i18n log lines
+		* i18n amule log lines (server window)
+		* amulecmd and webinterface i18n fixes
 		* Some win32 fixes (slashes and backslashes)
+		* Automake 1.8 fixes
 		* Add traditionnal Chinese translation (zh_TW) from Paul (Thanks !)
-		* Add it, nl, fr, pl, es translation updates (Thanks to all translators)
+		* Add it, nl, fr, pl, es, eu translation updates (Thanks to all translators)
 		* Fix copyright for alc icons
-		* Replace .ico simple icons by icons group .ico
+		* Replace amule, wxCas, alc .ico simple icons by icons group .ico
+		* Replace alcc's printf by wxLogMassage
+		* Make runtime to be in seconds in amulesig.dat
+		* Modify Xas to handle runtime in seconds
+		* Modify wxCas to handle runtime in seconds
 		
 
 Version 2.0.0rc5 - The 'Let's recover our release speed' version.
